--- a/src/assets/styles/parts/_base.scss
+++ b/src/assets/styles/parts/_base.scss
@@ -2,11 +2,11 @@
   box-sizing: border-box;
 }
 
-@import url('https://fonts.googleapis.com/css2?family=Dosis:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Dosis:wght@500&family=Open+Sans&display=swap');
 
 body {
   @include body;
-  font-family: 'Dosis', sans-serif;
+  font-family: 'Open Sans', sans-serif;
   background-color: color(ice-blue);
   font-size: 100%;
   min-height: 100vh;
@@ -19,6 +19,10 @@ body {
 input,
 button {
   outline: none;
+}
+
+h1, h2, h3, h4, h5 {
+  font-family: 'Dosis', sans-serif;
 }
 
 a {
